chore(zen-popover): fix z-indexes

--- a/src/components/zen-popover/zen-popover.scss
+++ b/src/components/zen-popover/zen-popover.scss
@@ -4,6 +4,8 @@
 :host {
   display: block;
   width: max-content;
+  position: relative;
+  z-index: $z-index-tooltips;
 }
 
 .popup-wrap {
